<resources>
    <string name="app_name">New Glossary</string>
    <string name="action_settings">Settings</string>
    <string name="cis">CIS</string>
    <string name="applied_sciences">Applied Sciences</string>
    <string name="faculty_of">Faculty Of</string>
    <string name="fst">FST</string>
    <string name="nr">NR</string>
    <string name="pst">PST</string>
    <string name="sports">Sports</string>
    <string name="title_activity_cis">cis</string>
    <string name="hi">hi</string>
    <string name="title_activity_pst">pst</string>
    <string name="textview">TextView</string>
    <string name="textview1">TextView</string>
</resources>
